# test-skeletons

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  hello.cpp  hello.h
test.boost/: CMakeLists.txt  run_hello_test_using_boost.cpp
test.catch/: CMakeLists.txt  run_hello_test_using_catch.cpp
